--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"typescript.tsdk": "node_modules\\typescript\\lib",
+	"prettier.packageManager": "yarn",
 	"postcssSorting.showErrorMessages": true,
+	"stylefmt.useStylelintConfigOverrides": true,
 	"css.validate": false,
 	"scss.validate": false,
 	"eslint.packageManager": "yarn",
@@ -9,20 +11,8 @@
 		"source.fixAll.stylelint": true
 	},
 	"editor.formatOnSave": true,
-	"editor.defaultFormatter":"esbenp.prettier-vscode",
-	"[scss]": {
-		"editor.defaultFormatter": "mrmlnc.vscode-stylefmt"
-	},
-	"[less]": {
-		"editor.defaultFormatter": "mrmlnc.vscode-stylefmt"
-	},
-	"[css]": {
-		"editor.defaultFormatter": "mrmlnc.vscode-stylefmt"
-	},
-	"[stylus]": {
-		"editor.defaultFormatter": "mrmlnc.vscode-stylefmt"
-	},
-	"[styl]": {
-		"editor.defaultFormatter": "mrmlnc.vscode-stylefmt"
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"[html]": {
+		"editor.defaultFormatter": "vscode.html-language-features"
 	}
 }
