--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -1,45 +1,45 @@
 {
-  "name": "@siu-vue/header",
-  "description": "@siu-vue/header",
-  "version": "1.0.0",
-  "keywords": [
-    "header",
-    "Header",
-    "vui",
-    "ui",
-    "vue",
-    "@siu-vue"
-  ],
-  "author": "lizp <lizp@jxgtmbjt.com>",
-  "homepage": "https://github.com/buns-li/siu-vue#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/buns-li/siu-vue.git"
-  },
-  "bugs": {
-    "url": "https://github.com/buns-li/siu-vue/issues"
-  },
-  "license": "ISC",
-  "globalName": "Header",
-  "unpkg": "dist/header.js",
-  "modern": "dist/header.modern.js",
-  "module": "lib/index.ts",
-  "main": "lib/index.ts",
-  "style": "dist/index.css",
-  "types": "types/index.d.ts",
-  "files": [
-    "dist",
-    "types",
-    "lib"
-  ],
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "scripts": {
-    "build": "siu build @siu-vue/header"
-  },
-  "dependencies": {
-    "@siu-vui/shared": "1.0.0"
-  }
+	"name": "@siu-vue/header",
+	"description": "@siu-vue/header",
+	"version": "1.0.0",
+	"keywords": [
+		"header",
+		"Header",
+		"vui",
+		"ui",
+		"vue",
+		"@siu-vue"
+	],
+	"author": "lizp <lizp@jxgtmbjt.com>",
+	"homepage": "https://github.com/buns-li/siu-vue#readme",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/buns-li/siu-vue.git"
+	},
+	"bugs": {
+		"url": "https://github.com/buns-li/siu-vue/issues"
+	},
+	"license": "ISC",
+	"globalName": "Header",
+	"unpkg": "dist/header.js",
+	"modern": "dist/header.modern.js",
+	"module": "lib/index.ts",
+	"main": "lib/index.ts",
+	"style": "dist/index.css",
+	"types": "types/index.d.ts",
+	"files": [
+		"dist",
+		"types",
+		"lib"
+	],
+	"directories": {
+		"lib": "lib",
+		"test": "__tests__"
+	},
+	"scripts": {
+		"build": "siu build @siu-vue/header"
+	},
+	"dependencies": {
+		"@siu-vue/shared": "1.0.0"
+	}
 }
