--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@siu-vui/shared",
-  "version": "1.0.0",
-  "description": "shared utils",
-  "keywords": [
-    "siu-vui",
-    "shared"
-  ],
-  "author": "buns <zpli_buns@126.com>",
-  "homepage": "",
-  "license": "MIT",
+	"name": "@siu-vue/shared",
+	"version": "1.0.0",
+	"description": "shared utils",
+	"keywords": [
+		"siu-vui",
+		"shared"
+	],
+	"author": "buns <zpli_buns@126.com>",
+	"homepage": "",
+	"license": "MIT",
 	"main": "lib/index.ts",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+	"directories": {
+		"lib": "lib",
+		"test": "__tests__"
 	},
-	"buildable":false
+	"buildable": false
 }
