--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	],
 	"scripts": {
 		"build": "siu build",
-		"test": "jest"
+		"test": "jest --coverage"
 	},
 	"lint-staged": {
 		"packages/**/lib/**/*.{ts,tsx,js,jsx,vue}": [
@@ -44,6 +44,7 @@
 		"jest": "25.1.0",
 		"lerna": "^3.20.2",
 		"lint-staged": "10.0.7",
+		"matchmedia-polyfill": "0.3.2",
 		"node-sass": "4.13.1",
 		"prettier": "1.19.1",
 		"stylelint": "13.2.0",
